--- a/app/temp-style.css
+++ b/app/temp-style.css
@@ -22,7 +22,7 @@ h1, h2, h3, h4, p {
 	margin: 10px auto;
 }
 
-h1, h2, h3, h4, p, button {
+h1, h2, h3, h4, p, button, input {
 	font-family: 'Roboto', sans-serif;
 }
 
